# libBG

./: CMakeLists.txt  LICENSE  README.org
includes/: BondGraph.hpp  Component.hpp  Solver.hpp  exception.hpp  expression.hpp  util.hpp
src/: ex1.cpp
src/cpp/: HierarchicalBondGraph.cpp
src/includes/: BondGraph.hpp  Component.hpp  HierarchicalBondGraph.hpp  Solver.hpp  exception.hpp  expression.hpp  util.hpp
test/: RLClowpass.cpp  battery.cpp  ex1.cpp  hoistingDevdiff.cpp  hoistingDevice.cpp  hybridTest1.cpp  massvelCompensator.cpp  massvelocityPcontrol.cpp  test1.cpp  test2.cpp  testexp.cpp
test/batteryTest/: battery.mo  batteryEnv.mo  batteryModel.mo  inputCurrent.mo  plot.py  simulate.mos
